# atlas-pr-diff

./: .gitignore  Makefile  README.md  atlas-diff  pyproject.toml
atlas_diff/: __init__.py  cli.py  config.py  diff.py  model.py  render.py  revyl.py
examples/: sample-report.md  sample-result.json  ubert-baseline.snapshot.json
github/: action.yml  post_check.py  workflow-example.yml
tests/: test_config.py  test_diff.py  test_model.py  test_model_v2.py  test_render_v2.py
